Created page for product

--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,29 +1,31 @@
 {% extends 'catalog/base.html' %}
+{% load my_tags %}
 {% block content %}
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    {% for object in object_list %}
-    <div class="col">
-        <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                 role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"/>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
-
-            <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">{{ title|title }}</h1>
+</div>
+<main>
+    <div class="album py-3 bg-body-tertiary">
+        <div class="container text-center">
+            {% for info in product %}
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 g-3">
+                <div class="col">
+                    <p class="card shadow-sm">
+                        <img class="card-img-top" src="{{ info.picture|my_media }}" alt="Картинок не завезли">
+                    </p>
+                </div>
+                <div class="col-5 text-md-start">
+                    {{info.description}}
+                    <p>
+                        <a href="{% url 'catalog:contacts' %}"
+                           class="btn btn-primary justify-content-md-center my-5">Купить за {{info.purchase_price}} $</a>
+                    </p>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
-    {% end for %}
-</div>
-{% end block %}
+
+</main>
+
+{% endblock %}
