--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -2,30 +2,28 @@
 {% load my_tags %}
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">{{ title|title }}</h1>
+    <h1 class="display-4">{{ object.name|title }}</h1>
 </div>
 <main>
     <div class="album py-3 bg-body-tertiary">
         <div class="container text-center">
-            {% for info in product %}
             <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 g-3">
                 <div class="col">
                     <p class="card shadow-sm">
-                        <img class="card-img-top" src="{{ info.picture|my_media }}" alt="Картинок не завезли">
+                        <img class="card-img-top" src="{{ object.picture|my_media }}" alt="Картинок не завезли">
                     </p>
                 </div>
                 <div class="col-5 text-md-start">
-                    {{info.description}}
+                    {{ object.description|truncatechars:20 }}
                     <p>
                         <a href="{% url 'catalog:contacts' %}"
-                           class="btn btn-primary justify-content-md-center my-5">Купить за {{info.purchase_price}} $</a>
+                           class="btn btn-primary justify-content-md-center my-5">Купить за {{object.purchase_price}} $</a>
                     </p>
                 </div>
             </div>
-            {% endfor %}
+
         </div>
     </div>
-
 </main>
 
 {% endblock %}
