--- a/catalog/templates/catalog/includes/inc_main.html
+++ b/catalog/templates/catalog/includes/inc_main.html
@@ -3,5 +3,6 @@
     <nav class="ms-3">
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="/catalog/">Блог</a>
     </nav>
 </div>
