--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -6,9 +6,11 @@
 </div>
 <form method="post" action="" class="form-floating">
     {% csrf_token %}
+    {% if user.is_authenticated %}
         <a type="button" class="btn btn-lg btn-block btn-outline-primary"
                                     href="{% url 'catalog:product_form' %}">
                                     Добавить запись</a>
+    {% endif %}
     <div class="row">
         <div class="row row-cols-1 row-cols-md-2 g-4">
             {% for object in object_list|slice:5 %}
