--- a/catalog/templates/catalog/includes/inc_main.html
+++ b/catalog/templates/catalog/includes/inc_main.html
@@ -5,10 +5,11 @@
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="/catalog/">Блог</a>
         {% if user.is_authenticated %}
-            <a class="p-2 btn btn-outline-primary" href="/users/logout/">Выйти</a>
+        <a class="p-2 btn btn-outline-primary" href="/users/profile/">Профиль</a>
+        <a class="p-2 btn btn-outline-primary" href="/users/logout/">Выйти</a>
         {% else %}
-            <a class="p-2 btn btn-outline-primary" href="/users/login/">Войти</a>
-            <a class="p-2 btn btn-outline-primary" href="/users/register/">Регистрация</a>
+        <a class="p-2 btn btn-outline-primary" href="/users/login/">Войти</a>
+        <a class="p-2 btn btn-outline-primary" href="/users/register/">Регистрация</a>
         {% endif %}
     </nav>
 </div>
