--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -9,17 +9,15 @@
             <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 g-3">
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-8">
                                 <div class="card">
                                     <div class="card-body">
                                         <form method="post" enctype="multipart/form-data">
                                             {% csrf_token %}
-                                            <p> Хотите удалить запись "{{ object.title }}"? </p>
+                                            <p> Хотите удалить запись "{{ object.name }}"? </p>
                                             <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Подтвердить</button>
-
+                                            <a href="{% url 'catalog:product_list' %}" class="btn btn-lg btn-block btn-outline-primary">Отмена</a>
                                         </form>
-                                        <a href="{% url 'catalog:product_list' %}" class="btn btn-lg btn-block btn-outline-primary">Отмена</a>
-
                                     </div>
                                 </div>
                             </div>
