--- a/catalog/templates/catalog/category_detail.html
+++ b/catalog/templates/catalog/category_detail.html
@@ -1,13 +1,29 @@
 {% extends 'catalog/base.html' %}
-{% load static %}
-
-
+{% load my_tags %}
 {% block content %}
-<div class="card mx-auto" style="width: 18rem;">
-    <div class="card-body mx-20">
-        <form method="post" enctype="multipart/form-data"></form>
-        <h5 class="card-title">{{object.name}}</h5>
-        <p class="card-text">{{object.description}}</p>
-    </div>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">{{ object.name|title }}</h1>
 </div>
+<main>
+    <div class="album py-3 bg-body-tertiary">
+        <div class="container text-center">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 g-3">
+                <div class="col">
+                    <p class="card shadow-sm">
+                        <img class="card-img-top" src="{{ object.picture|my_media }}" alt="Картинок не завезли">
+                    </p>
+                </div>
+                <div class="col-5 text-md-start">
+                    {{ object.description|truncatechars:20 }}
+                    <p>
+                        <a href="{% url 'catalog:contacts_list' %}"
+                           class="btn btn-primary justify-content-md-center my-5">Купить за {{object.purchase_price}} $</a>
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</main>
+
 {% endblock %}
